<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2015 The Android Open Source Project
     SPDX-License-Identifier: Apache-2.0
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history" />

    <item android:id="@+id/menu_leading"
        android:title="@string/menu_leading" />

    <item android:id="@+id/menu_fraction"
        android:title="@string/menu_fraction" />

    <item android:id="@+id/menu_licenses"
        android:title="@string/menu_licenses" />

    <!-- Mode-only setting: show another unit/currency conversion output. -->
    <item android:id="@+id/menu_second_conversion"
        android:title="@string/menu_second_conversion"
        android:checkable="true"
        android:visible="false" />

    <!-- Settings: toggle automatic currency-rate updates. [CHAR_LIMIT=40] -->
    <item android:id="@+id/menu_auto_update_rates"
        android:title="@string/menu_auto_update_rates"
        android:checkable="true"
        android:visible="false" />

</menu>
